2007-02-19  Marek Habersack  <grendello@gmail.com>

	* ApplicationHost.cs: Use a deterministic application name, so
	that the temporary location is always in the same place for the
	given app.

2007-01-30  Marek Habersack  <grendello@gmail.com>

	* ApplicationHost.cs: Define AppDomain data item "DataDirectory" - used
	by the ADO.NET |DataDirectory| connection string placeholder. Present
	by default in MS.NET.

2007-01-20  Miguel de Icaza  <miguel@novell.com>

	* ApplicationManager.cs: Remove unused variable.
	(ShutdownAll) remove unused variables.

	* ApplicationHost.cs: Protect create_dir lock 

2007-01-19  Marek Habersack  <grendello@gmail.com>

	* SimpleWorkerRequest.cs: If path is empty, return the physical
	application directory. Fixes bug #80544.

2007-01-17  Adar Wesley <adarw@mainsoft.com>

	* ApplicationHost.cs: tweaking CreateApplicationHost to throw the 
	right exceptions so the tests will pass.

2007-01-11  Adar Wesley <adarw@mainsoft.com>

	* ApplicationHost.cs: fixed AppDomain initialization of physical
	path to be in file system semantics

2006-12-22  Marek Habersack  <grendello@gmail.com>

	* HostingEnvironment.cs: implemented the SetCultures methods.

2006-12-19 Igor Zelmanovich <igorz@mainsoft.com>

	* ServletWorkerRequest.cs: fixed:
	Path.Combine is used in GetFilePathTranslated to consider 
	platform-depended PathSeparator char.

2006-12-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ServletWorkerRequest.jvm.cs: fixed request uri unescaping in
	ServletWorkerRequest ctor

2006-11-24  Miguel de Icaza  <miguel@novell.com>

	* ApplicationHost.cs: In 2.0, as Todd reports the default is
	"Web.Config", try that before we tell people to use MONO_IOMAP=all ;-)

2006-11-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationHost.cs: the new Directory code throws if the directory
	exists, so handle that as gracefully as possible.

2006-08-23 Konstantin Triger <kostat@mainsoft.com>

	* ServletWorkerRequest.jvm.cs: fix default page resolution.
